==> xzips/RCLink/RCLink Pico Transceiver Dual-LoRa/Pico-LoRa-Transceiver/pico_rc_link/LoRa-RP2040.cpp <==
#include "LoRa-RP2040.h"
#define REG_FIFO                 0x00
#define REG_OP_MODE              0x01
#define REG_FRF_MSB              0x06
#define REG_FRF_MID              0x07
#define REG_FRF_LSB              0x08
#define REG_PA_CONFIG            0x09
#define IRQ_CAD_DETECTED_MASK    0x01
#define REG_OCP                  0x0b
#define REG_LNA                  0x0c
#define IRQ_CAD_DONE_MASK        0x04
#define REG_FIFO_ADDR_PTR        0x0d
#define REG_FIFO_TX_BASE_ADDR    0x0e
#define REG_FIFO_RX_BASE_ADDR    0x0f
#define REG_FIFO_RX_CURRENT_ADDR 0x10
#define REG_IRQ_FLAGS            0x12
#define REG_RX_NB_BYTES          0x13
#define REG_PKT_SNR_VALUE        0x19
#define REG_PKT_RSSI_VALUE       0x1a
#define REG_RSSI_VALUE           0x1b
#define REG_MODEM_CONFIG_1       0x1d
#define REG_MODEM_CONFIG_2       0x1e
#define REG_PREAMBLE_MSB         0x20
#define REG_PREAMBLE_LSB         0x21
#define REG_PAYLOAD_LENGTH       0x22
#define REG_MODEM_CONFIG_3       0x26
#define REG_FREQ_ERROR_MSB       0x28
#define REG_FREQ_ERROR_MID       0x29
#define REG_FREQ_ERROR_LSB       0x2a
#define REG_RSSI_WIDEBAND        0x2c
#define REG_DETECTION_OPTIMIZE   0x31
#define REG_INVERTIQ             0x33
#define REG_DETECTION_THRESHOLD  0x37
#define REG_SYNC_WORD            0x39
#define REG_INVERTIQ2            0x3b
#define REG_DIO_MAPPING_1        0x40
#define REG_VERSION              0x42
#define REG_PA_DAC               0x4d
#define MODE_CAD                 0x07

int LoRaClass::begin(long frequency) 
{

  // setup pins
  gpio_init(_ss);
  gpio_set_dir(_ss, GPIO_OUT);
  // set SS high
  gpio_put(_ss, 1);

  if (_reset != -1) {
    gpio_init(_reset);
    gpio_set_dir(_reset, GPIO_OUT);

    // perform reset
    gpio_put(_reset, 0);
    sleep_ms(10);
    gpio_put(_reset, 1);
    sleep_ms(10);
  }


  // start SPI
  spi_init(SPI_PORT, 8000000);
  gpio_set_function(PIN_MISO, GPIO_FUNC_SPI);
  gpio_set_function(PIN_SCK, GPIO_FUNC_SPI);
  gpio_set_function(PIN_MOSI, GPIO_FUNC_SPI);


  // Make the SPI pins available to picotool
  bi_decl(bi_3pins_with_func(PIN_MISO, PIN_MOSI, PIN_SCK, GPIO_FUNC_SPI));

  gpio_init(_pin_cs);
  gpio_set_dir(_pin_cs, GPIO_OUT);
  gpio_put(_pin_cs, 1);

  // Make the CS pin available to picotool
  bi_decl(bi_1pin_with_name(_pin_cs, "SPI CS"));

  // check version
  uint8_t version = readRegister(REG_VERSION);
  if (version != 0x12) {
    return 0;
  }

  // put in sleep mode
  sleep();

  // set frequency
  setFrequency(frequency);

  // set base addresses
  writeRegister(REG_FIFO_TX_BASE_ADDR, 0);
  writeRegister(REG_FIFO_RX_BASE_ADDR, 0);

  // set LNA boost
  writeRegister(REG_LNA, readRegister(REG_LNA) | 0x03);

  // set auto AGC
  writeRegister(REG_MODEM_CONFIG_3, 0x04);

  // set output power to 17 dBm
  setTxPower(17);

  // put in standby mode
  idle();

  return 1;
}

void LoRaClass::onReceive(void(*callback)(int)) 
{
  _onReceive = callback;

  if (callback) {
    gpio_set_irq_enabled_with_callback(_dio0, GPIO_IRQ_EDGE_RISE, true, &LoRaClass::onDio0Rise);
  } else {
    gpio_set_irq_enabled(_dio0, GPIO_IRQ_EDGE_RISE, false);
  }
}

void LoRaClass::onCadDone(void(*callback)(bool)) 
{
  _onCadDone = callback;

  if (callback) {
    gpio_set_irq_enabled_with_callback(_dio0, GPIO_IRQ_EDGE_RISE, true,
                                       &LoRaClass::onDio0Rise);
  } else {
    gpio_set_irq_enabled(_dio0, GPIO_IRQ_EDGE_RISE, false);
  }
}

void LoRaClass::onTxDone(void (*callback)()) 
{
  _onTxDone = callback;

  if (callback) {
    gpio_set_irq_enabled_with_callback(_dio0, GPIO_IRQ_EDGE_RISE, true, &LoRaClass::onDio0Rise);
  } else {
    gpio_set_irq_enabled(_dio0, GPIO_IRQ_EDGE_RISE, false);
  }
}

void LoRaClass::setSPIFrequency(uint32_t frequency)
{
  spi_set_baudrate(SPI_PORT, frequency);
}

uint8_t LoRaClass::singleTransfer(uint8_t address, uint8_t value) 
{
  uint8_t response;

  gpio_put(_ss, 0);

  spi_write_blocking(SPI_PORT, &address, 1);
  spi_write_read_blocking(SPI_PORT, &value, &response, 1);

  gpio_put(_ss, 1);

  return response;
}

void LoRaClass::onDio0Rise(uint gpio, uint32_t events) {
    gpio_acknowledge_irq(gpio, events);

    printf("Handeling a DIO0 rise\n");
    
    if (gpio == LoRa1._dio0) {
        LoRa1.handleDio0Rise(); // Handle interrupt for the first LoRa module
    } else if (gpio == LoRa2._dio0) {
        LoRa2.handleDio0Rise(); // Handle interrupt for the second LoRa module
    }
}
